Add html structure

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+	line-height: 1.5;
 }
 ol, ul {
 	list-style: none;
@@ -40,6 +40,12 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+/* CSS */
+body {
+  display: flex;
+  box-sizing: border-box;
 }
 
 .background {
