--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,10 @@ body {
   font-family: Arial, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+a {
+	color: #E5E7EB;
+}
+
 .background {
 	display: flex;
 	flex-direction: column;
