--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
+del, dfn, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+b, u, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -60,7 +60,7 @@ body {
   display: flex;
   box-sizing: border-box;
 
-  font-family: Arial, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a {
@@ -125,4 +125,24 @@ img[src="./images/odin-lined.png"] {
 	padding: 0.9rem;
 	font-size: 0.9rem;
 	color: white;	
+}
+
+.information-section {
+	font-size: 1.5rem;
+	font-weight: 600;
+
+	padding: 0 4rem;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+}
+
+.information-section p:first-of-type {
+	width: 50ch;
+}
+
+.information-section p:last-of-type {
+	margin-top: 1.2rem;
+	margin-bottom: 3rem;
 }
